prep namespacing